parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACH
    ATC
    ATO
    BIN
    DATE_FULLYEAR
    DATE_MDAY
    DATE_MONTH
    FCH
    HEX
    INF
    NAN
    OCT
    PLUS
    TIME_DELIM
    TIME_HOUR
    TIME_MIN
    TIME_SEC
    TIME_SECFRAC
    UNDERSC0RE

Grammar

Rule 0     S' -> TOML
Rule 1     TOML -> EXPRESSION TOML2
Rule 2     TOML2 -> NEWLINE EXPRESSION TOML2
Rule 3     TOML2 -> <empty>
Rule 4     EXPRESSION -> KVALUE EXPRESSION2
Rule 5     EXPRESSION -> EXPRESSION2
Rule 6     EXPRESSION -> TABLE EXPRESSION2
Rule 7     EXPRESSION2 -> <empty>
Rule 8     EXPRESSION2 -> COMMENT
Rule 9     KVALUE -> KEY kvwhitespace IGUAL kvwhitespace VALUE
Rule 10    kvwhitespace -> WHITESPACE
Rule 11    kvwhitespace -> <empty>
Rule 12    KEY -> SIMPLEKEY
Rule 13    KEY -> DOTKEY
Rule 14    SIMPLEKEY -> QUOTEDKEY
Rule 15    SIMPLEKEY -> UNQUOTEDKEY
Rule 16    UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX
Rule 17    UNQUOTEDKEYAUX -> OCCURRENCES UNQUOTEDKEYAUX
Rule 18    UNQUOTEDKEYAUX -> <empty>
Rule 19    OCCURRENCES -> CHAR
Rule 20    OCCURRENCES -> INTEGER
Rule 21    OCCURRENCES -> MINUS
Rule 22    OCCURRENCES -> UNDERSCORE
Rule 23    QUOTEDKEY -> BASICSTRING
Rule 24    QUOTEDKEY -> LITERALSTRING
Rule 25    DOTKEY -> SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
Rule 26    DOTSIMPKEY -> DOT_SEP SIMPLEKEY DOTSIMPKEY
Rule 27    DOTSIMPKEY -> <empty>
Rule 28    VALUE -> STRING
Rule 29    VALUE -> BOOLEAN
Rule 30    VALUE -> INTEGER
Rule 31    VALUE -> ARRAY
Rule 32    VALUE -> FLOAT
Rule 33    STRING -> MULTILINEBASICSTRING
Rule 34    STRING -> BASICSTRING
Rule 35    STRING -> MLLITERALSTRING
Rule 36    STRING -> LITERALSTRING
Rule 37    BASICSTRING -> ASPA BC ASPA
Rule 38    BC -> BASICCHAR BC
Rule 39    BC -> <empty>
Rule 40    BASICCHAR -> BASICUNESCAPED
Rule 41    BASICCHAR -> ESCAPED
Rule 42    BASICUNESCAPED -> WHITESPACE
Rule 43    BASICUNESCAPED -> CHAR
Rule 44    BASICUNESCAPED -> INTEGER
Rule 45    BASICUNESCAPED -> MINUS
Rule 46    BASICUNESCAPED -> APOSTROFE
Rule 47    BASICUNESCAPED -> ESCAPED
Rule 48    BASICUNESCAPED -> DOT_SEP
Rule 49    ESCAPED -> ESC_QUOTE
Rule 50    ESCAPED -> ESC_REVERSE
Rule 51    ESCAPED -> ESC_BACKSPACE
Rule 52    ESCAPED -> ESC_FF
Rule 53    ESCAPED -> ESC_NL
Rule 54    ESCAPED -> ESC_CRETURN
Rule 55    ESCAPED -> ESC_TAB
Rule 56    ESCAPED -> ESC_HEX4
Rule 57    ESCAPED -> ESC_HEX8
Rule 58    MULTILINEBASICSTRING -> MLBCSTRDELIM MLNL MLBASICBODY MLBCSTRDELIM
Rule 59    MLNL -> NEWLINE
Rule 60    MLBCSTRDELIM -> ASPA ASPA ASPA
Rule 61    MLBASICBODY -> MLBC MLBQC MLQ
Rule 62    MLBC -> MLBCONTENT MLBC
Rule 63    MLBC -> <empty>
Rule 64    MLBQC -> MLBQUOTES MLBCONTENT MLBC2 MLBQC
Rule 65    MLBQC -> <empty>
Rule 66    MLBC2 -> MLBCONTENT MLBC2
Rule 67    MLBC2 -> <empty>
Rule 68    MLQ -> MLBQUOTES
Rule 69    MLQ -> <empty>
Rule 70    MLBCONTENT -> MLBCHAR
Rule 71    MLBCONTENT -> NEWLINE
Rule 72    MLBCONTENT -> MLBESCAPEDNL
Rule 73    MLBCHAR -> MLBUNESCAPED
Rule 74    MLBCHAR -> ESCAPED
Rule 75    MLBQUOTES -> ASPA
Rule 76    MLBQUOTES -> ASPA ASPA
Rule 77    MLBUNESCAPED -> WHITESPACE
Rule 78    MLBUNESCAPED -> CHAR
Rule 79    MLBESCAPEDNL -> ESCAPE WHITESPACE NEWLINE WHNL
Rule 80    WHNL -> SPACENEWLINE WHNL
Rule 81    WHNL -> <empty>
Rule 82    SPACENEWLINE -> WHITESPACE
Rule 83    SPACENEWLINE -> NEWLINE
Rule 84    LITERALSTRING -> APOSTROFE LCH APOSTROFE
Rule 85    LCH -> LITERALCHAR LCH
Rule 86    LCH -> <empty>
Rule 87    LITERALCHAR -> CHAR
Rule 88    LITERALCHAR -> ESCAPED
Rule 89    MLLITERALSTRING -> MLLITERALSTRINGDELIM NLR MLLITERALBODY NLR MLLITERALSTRINGDELIM
Rule 90    NLR -> NEWLINE
Rule 91    NLR -> <empty>
Rule 92    MLLITERALSTRINGDELIM -> APOSTROFE APOSTROFE APOSTROFE
Rule 93    MLLITERALBODY -> MLLC MLLQC MLLQ
Rule 94    MLLC -> MLLCONTENT MLLC
Rule 95    MLLC -> <empty>
Rule 96    MLLQC -> <empty>
Rule 97    MLLQC -> MLLQUOTES MLLCONTENT MLLC2 MLLQC
Rule 98    MLLC2 -> MLLCONTENT MLLC2
Rule 99    MLLC2 -> <empty>
Rule 100   MLLQ -> <empty>
Rule 101   MLLQ -> MLLQUOTES
Rule 102   MLLCONTENT -> MLLCHAR
Rule 103   MLLCONTENT -> NEWLINE
Rule 104   MLLCHAR -> CHAR
Rule 105   MLLQUOTES -> APOSTROFE APOSTROFE
Rule 106   MLLQUOTES -> APOSTROFE
Rule 107   ARRAY -> APR ARRAYVALUES WSCOMMENTNEWLINE FPR
Rule 108   ARRAYVALUES -> <empty>
Rule 109   ARRAYVALUES -> WSCOMMENTNEWLINE VALUE ARRAYCONTEUDO
Rule 110   ARRAYCONTEUDO -> <empty>
Rule 111   ARRAYCONTEUDO -> WSCOMMENTNEWLINE VIRGULA ARRAYVALUES
Rule 112   WSCOMMENTNEWLINE -> <empty>
Rule 113   WSCOMMENTNEWLINE -> INNERCOMMENT WSCOMMENTNEWLINE
Rule 114   INNERCOMMENT -> WHITESPACE
Rule 115   INNERCOMMENT -> COMMENTOUNAO NEWLINE
Rule 116   COMMENTOUNAO -> COMMENT
Rule 117   COMMENTOUNAO -> <empty>
Rule 118   TABLE -> APR KEY FPR

Terminals, with rules where they appear

ACH                  : 
APOSTROFE            : 46 84 84 92 92 92 105 105 106
APR                  : 107 118
ASPA                 : 37 37 60 60 60 75 76 76
ATC                  : 
ATO                  : 
BIN                  : 
BOOLEAN              : 29
CHAR                 : 19 43 78 87 104
COMMENT              : 8 116
DATE_FULLYEAR        : 
DATE_MDAY            : 
DATE_MONTH           : 
DOT_SEP              : 25 26 48
ESCAPE               : 79
ESC_BACKSPACE        : 51
ESC_CRETURN          : 54
ESC_FF               : 52
ESC_HEX4             : 56
ESC_HEX8             : 57
ESC_NL               : 53
ESC_QUOTE            : 49
ESC_REVERSE          : 50
ESC_TAB              : 55
FCH                  : 
FLOAT                : 32
FPR                  : 107 118
HEX                  : 
IGUAL                : 9
INF                  : 
INTEGER              : 20 30 44
MINUS                : 21 45
NAN                  : 
NEWLINE              : 2 59 71 79 83 90 103 115
OCT                  : 
PLUS                 : 
TIME_DELIM           : 
TIME_HOUR            : 
TIME_MIN             : 
TIME_SEC             : 
TIME_SECFRAC         : 
UNDERSC0RE           : 
UNDERSCORE           : 22
VIRGULA              : 111
WHITESPACE           : 10 42 77 79 82 114
error                : 

Nonterminals, with rules where they appear

ARRAY                : 31
ARRAYCONTEUDO        : 109
ARRAYVALUES          : 107 111
BASICCHAR            : 38
BASICSTRING          : 23 34
BASICUNESCAPED       : 40
BC                   : 37 38
COMMENTOUNAO         : 115
DOTKEY               : 13
DOTSIMPKEY           : 25 26
ESCAPED              : 41 47 74 88
EXPRESSION           : 1 2
EXPRESSION2          : 4 5 6
INNERCOMMENT         : 113
KEY                  : 9 118
KVALUE               : 4
LCH                  : 84 85
LITERALCHAR          : 85
LITERALSTRING        : 24 36
MLBASICBODY          : 58
MLBC                 : 61 62
MLBC2                : 64 66
MLBCHAR              : 70
MLBCONTENT           : 62 64 66
MLBCSTRDELIM         : 58 58
MLBESCAPEDNL         : 72
MLBQC                : 61 64
MLBQUOTES            : 64 68
MLBUNESCAPED         : 73
MLLC                 : 93 94
MLLC2                : 97 98
MLLCHAR              : 102
MLLCONTENT           : 94 97 98
MLLITERALBODY        : 89
MLLITERALSTRING      : 35
MLLITERALSTRINGDELIM : 89 89
MLLQ                 : 93
MLLQC                : 93 97
MLLQUOTES            : 97 101
MLNL                 : 58
MLQ                  : 61
MULTILINEBASICSTRING : 33
NLR                  : 89 89
OCCURRENCES          : 16 17
QUOTEDKEY            : 14
SIMPLEKEY            : 12 25 25 26
SPACENEWLINE         : 80
STRING               : 28
TABLE                : 6
TOML                 : 0
TOML2                : 1 2
UNQUOTEDKEY          : 15
UNQUOTEDKEYAUX       : 16 17
VALUE                : 9 109
WHNL                 : 79 80
WSCOMMENTNEWLINE     : 107 109 111 113
kvwhitespace         : 9 9

Parsing method: LALR

state 0

    (0) S' -> . TOML
    (1) TOML -> . EXPRESSION TOML2
    (4) EXPRESSION -> . KVALUE EXPRESSION2
    (5) EXPRESSION -> . EXPRESSION2
    (6) EXPRESSION -> . TABLE EXPRESSION2
    (9) KVALUE -> . KEY kvwhitespace IGUAL kvwhitespace VALUE
    (7) EXPRESSION2 -> .
    (8) EXPRESSION2 -> . COMMENT
    (118) TABLE -> . APR KEY FPR
    (12) KEY -> . SIMPLEKEY
    (13) KEY -> . DOTKEY
    (14) SIMPLEKEY -> . QUOTEDKEY
    (15) SIMPLEKEY -> . UNQUOTEDKEY
    (25) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (23) QUOTEDKEY -> . BASICSTRING
    (24) QUOTEDKEY -> . LITERALSTRING
    (16) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (37) BASICSTRING -> . ASPA BC ASPA
    (84) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    NEWLINE         reduce using rule 7 (EXPRESSION2 -> .)
    $end            reduce using rule 7 (EXPRESSION2 -> .)
    COMMENT         shift and go to state 7
    APR             shift and go to state 8
    ASPA            shift and go to state 16
    APOSTROFE       shift and go to state 17
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    TOML                           shift and go to state 1
    EXPRESSION                     shift and go to state 2
    KVALUE                         shift and go to state 3
    EXPRESSION2                    shift and go to state 4
    TABLE                          shift and go to state 5
    KEY                            shift and go to state 6
    SIMPLEKEY                      shift and go to state 9
    DOTKEY                         shift and go to state 10
    QUOTEDKEY                      shift and go to state 11
    UNQUOTEDKEY                    shift and go to state 12
    BASICSTRING                    shift and go to state 13
    LITERALSTRING                  shift and go to state 14
    OCCURRENCES                    shift and go to state 15

state 1

    (0) S' -> TOML .



state 2

    (1) TOML -> EXPRESSION . TOML2
    (2) TOML2 -> . NEWLINE EXPRESSION TOML2
    (3) TOML2 -> .

    NEWLINE         shift and go to state 23
    $end            reduce using rule 3 (TOML2 -> .)

    TOML2                          shift and go to state 22

state 3

    (4) EXPRESSION -> KVALUE . EXPRESSION2
    (7) EXPRESSION2 -> .
    (8) EXPRESSION2 -> . COMMENT

    NEWLINE         reduce using rule 7 (EXPRESSION2 -> .)
    $end            reduce using rule 7 (EXPRESSION2 -> .)
    COMMENT         shift and go to state 7

    EXPRESSION2                    shift and go to state 24

state 4

    (5) EXPRESSION -> EXPRESSION2 .

    NEWLINE         reduce using rule 5 (EXPRESSION -> EXPRESSION2 .)
    $end            reduce using rule 5 (EXPRESSION -> EXPRESSION2 .)


state 5

    (6) EXPRESSION -> TABLE . EXPRESSION2
    (7) EXPRESSION2 -> .
    (8) EXPRESSION2 -> . COMMENT

    NEWLINE         reduce using rule 7 (EXPRESSION2 -> .)
    $end            reduce using rule 7 (EXPRESSION2 -> .)
    COMMENT         shift and go to state 7

    EXPRESSION2                    shift and go to state 25

state 6

    (9) KVALUE -> KEY . kvwhitespace IGUAL kvwhitespace VALUE
    (10) kvwhitespace -> . WHITESPACE
    (11) kvwhitespace -> .

    WHITESPACE      shift and go to state 27
    IGUAL           reduce using rule 11 (kvwhitespace -> .)

    kvwhitespace                   shift and go to state 26

state 7

    (8) EXPRESSION2 -> COMMENT .

    NEWLINE         reduce using rule 8 (EXPRESSION2 -> COMMENT .)
    $end            reduce using rule 8 (EXPRESSION2 -> COMMENT .)


state 8

    (118) TABLE -> APR . KEY FPR
    (12) KEY -> . SIMPLEKEY
    (13) KEY -> . DOTKEY
    (14) SIMPLEKEY -> . QUOTEDKEY
    (15) SIMPLEKEY -> . UNQUOTEDKEY
    (25) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (23) QUOTEDKEY -> . BASICSTRING
    (24) QUOTEDKEY -> . LITERALSTRING
    (16) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (37) BASICSTRING -> . ASPA BC ASPA
    (84) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    ASPA            shift and go to state 16
    APOSTROFE       shift and go to state 17
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    KEY                            shift and go to state 28
    SIMPLEKEY                      shift and go to state 9
    DOTKEY                         shift and go to state 10
    QUOTEDKEY                      shift and go to state 11
    UNQUOTEDKEY                    shift and go to state 12
    BASICSTRING                    shift and go to state 13
    LITERALSTRING                  shift and go to state 14
    OCCURRENCES                    shift and go to state 15

state 9

    (12) KEY -> SIMPLEKEY .
    (25) DOTKEY -> SIMPLEKEY . DOT_SEP SIMPLEKEY DOTSIMPKEY

    WHITESPACE      reduce using rule 12 (KEY -> SIMPLEKEY .)
    IGUAL           reduce using rule 12 (KEY -> SIMPLEKEY .)
    FPR             reduce using rule 12 (KEY -> SIMPLEKEY .)
    DOT_SEP         shift and go to state 29


state 10

    (13) KEY -> DOTKEY .

    WHITESPACE      reduce using rule 13 (KEY -> DOTKEY .)
    IGUAL           reduce using rule 13 (KEY -> DOTKEY .)
    FPR             reduce using rule 13 (KEY -> DOTKEY .)


state 11

    (14) SIMPLEKEY -> QUOTEDKEY .

    DOT_SEP         reduce using rule 14 (SIMPLEKEY -> QUOTEDKEY .)
    WHITESPACE      reduce using rule 14 (SIMPLEKEY -> QUOTEDKEY .)
    IGUAL           reduce using rule 14 (SIMPLEKEY -> QUOTEDKEY .)
    FPR             reduce using rule 14 (SIMPLEKEY -> QUOTEDKEY .)


state 12

    (15) SIMPLEKEY -> UNQUOTEDKEY .

    DOT_SEP         reduce using rule 15 (SIMPLEKEY -> UNQUOTEDKEY .)
    WHITESPACE      reduce using rule 15 (SIMPLEKEY -> UNQUOTEDKEY .)
    IGUAL           reduce using rule 15 (SIMPLEKEY -> UNQUOTEDKEY .)
    FPR             reduce using rule 15 (SIMPLEKEY -> UNQUOTEDKEY .)


state 13

    (23) QUOTEDKEY -> BASICSTRING .

    DOT_SEP         reduce using rule 23 (QUOTEDKEY -> BASICSTRING .)
    WHITESPACE      reduce using rule 23 (QUOTEDKEY -> BASICSTRING .)
    IGUAL           reduce using rule 23 (QUOTEDKEY -> BASICSTRING .)
    FPR             reduce using rule 23 (QUOTEDKEY -> BASICSTRING .)


state 14

    (24) QUOTEDKEY -> LITERALSTRING .

    DOT_SEP         reduce using rule 24 (QUOTEDKEY -> LITERALSTRING .)
    WHITESPACE      reduce using rule 24 (QUOTEDKEY -> LITERALSTRING .)
    IGUAL           reduce using rule 24 (QUOTEDKEY -> LITERALSTRING .)
    FPR             reduce using rule 24 (QUOTEDKEY -> LITERALSTRING .)


state 15

    (16) UNQUOTEDKEY -> OCCURRENCES . UNQUOTEDKEYAUX
    (17) UNQUOTEDKEYAUX -> . OCCURRENCES UNQUOTEDKEYAUX
    (18) UNQUOTEDKEYAUX -> .
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    DOT_SEP         reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    WHITESPACE      reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    IGUAL           reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    FPR             reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    OCCURRENCES                    shift and go to state 30
    UNQUOTEDKEYAUX                 shift and go to state 31

state 16

    (37) BASICSTRING -> ASPA . BC ASPA
    (38) BC -> . BASICCHAR BC
    (39) BC -> .
    (40) BASICCHAR -> . BASICUNESCAPED
    (41) BASICCHAR -> . ESCAPED
    (42) BASICUNESCAPED -> . WHITESPACE
    (43) BASICUNESCAPED -> . CHAR
    (44) BASICUNESCAPED -> . INTEGER
    (45) BASICUNESCAPED -> . MINUS
    (46) BASICUNESCAPED -> . APOSTROFE
    (47) BASICUNESCAPED -> . ESCAPED
    (48) BASICUNESCAPED -> . DOT_SEP
    (49) ESCAPED -> . ESC_QUOTE
    (50) ESCAPED -> . ESC_REVERSE
    (51) ESCAPED -> . ESC_BACKSPACE
    (52) ESCAPED -> . ESC_FF
    (53) ESCAPED -> . ESC_NL
    (54) ESCAPED -> . ESC_CRETURN
    (55) ESCAPED -> . ESC_TAB
    (56) ESCAPED -> . ESC_HEX4
    (57) ESCAPED -> . ESC_HEX8

    ASPA            reduce using rule 39 (BC -> .)
    WHITESPACE      shift and go to state 36
    CHAR            shift and go to state 37
    INTEGER         shift and go to state 38
    MINUS           shift and go to state 39
    APOSTROFE       shift and go to state 40
    DOT_SEP         shift and go to state 41
    ESC_QUOTE       shift and go to state 42
    ESC_REVERSE     shift and go to state 43
    ESC_BACKSPACE   shift and go to state 44
    ESC_FF          shift and go to state 45
    ESC_NL          shift and go to state 46
    ESC_CRETURN     shift and go to state 47
    ESC_TAB         shift and go to state 48
    ESC_HEX4        shift and go to state 49
    ESC_HEX8        shift and go to state 50

    BC                             shift and go to state 32
    BASICCHAR                      shift and go to state 33
    BASICUNESCAPED                 shift and go to state 34
    ESCAPED                        shift and go to state 35

state 17

    (84) LITERALSTRING -> APOSTROFE . LCH APOSTROFE
    (85) LCH -> . LITERALCHAR LCH
    (86) LCH -> .
    (87) LITERALCHAR -> . CHAR
    (88) LITERALCHAR -> . ESCAPED
    (49) ESCAPED -> . ESC_QUOTE
    (50) ESCAPED -> . ESC_REVERSE
    (51) ESCAPED -> . ESC_BACKSPACE
    (52) ESCAPED -> . ESC_FF
    (53) ESCAPED -> . ESC_NL
    (54) ESCAPED -> . ESC_CRETURN
    (55) ESCAPED -> . ESC_TAB
    (56) ESCAPED -> . ESC_HEX4
    (57) ESCAPED -> . ESC_HEX8

    APOSTROFE       reduce using rule 86 (LCH -> .)
    CHAR            shift and go to state 53
    ESC_QUOTE       shift and go to state 42
    ESC_REVERSE     shift and go to state 43
    ESC_BACKSPACE   shift and go to state 44
    ESC_FF          shift and go to state 45
    ESC_NL          shift and go to state 46
    ESC_CRETURN     shift and go to state 47
    ESC_TAB         shift and go to state 48
    ESC_HEX4        shift and go to state 49
    ESC_HEX8        shift and go to state 50

    LCH                            shift and go to state 51
    LITERALCHAR                    shift and go to state 52
    ESCAPED                        shift and go to state 54

state 18

    (19) OCCURRENCES -> CHAR .

    CHAR            reduce using rule 19 (OCCURRENCES -> CHAR .)
    INTEGER         reduce using rule 19 (OCCURRENCES -> CHAR .)
    MINUS           reduce using rule 19 (OCCURRENCES -> CHAR .)
    UNDERSCORE      reduce using rule 19 (OCCURRENCES -> CHAR .)
    DOT_SEP         reduce using rule 19 (OCCURRENCES -> CHAR .)
    WHITESPACE      reduce using rule 19 (OCCURRENCES -> CHAR .)
    IGUAL           reduce using rule 19 (OCCURRENCES -> CHAR .)
    FPR             reduce using rule 19 (OCCURRENCES -> CHAR .)


state 19

    (20) OCCURRENCES -> INTEGER .

    CHAR            reduce using rule 20 (OCCURRENCES -> INTEGER .)
    INTEGER         reduce using rule 20 (OCCURRENCES -> INTEGER .)
    MINUS           reduce using rule 20 (OCCURRENCES -> INTEGER .)
    UNDERSCORE      reduce using rule 20 (OCCURRENCES -> INTEGER .)
    DOT_SEP         reduce using rule 20 (OCCURRENCES -> INTEGER .)
    WHITESPACE      reduce using rule 20 (OCCURRENCES -> INTEGER .)
    IGUAL           reduce using rule 20 (OCCURRENCES -> INTEGER .)
    FPR             reduce using rule 20 (OCCURRENCES -> INTEGER .)


state 20

    (21) OCCURRENCES -> MINUS .

    CHAR            reduce using rule 21 (OCCURRENCES -> MINUS .)
    INTEGER         reduce using rule 21 (OCCURRENCES -> MINUS .)
    MINUS           reduce using rule 21 (OCCURRENCES -> MINUS .)
    UNDERSCORE      reduce using rule 21 (OCCURRENCES -> MINUS .)
    DOT_SEP         reduce using rule 21 (OCCURRENCES -> MINUS .)
    WHITESPACE      reduce using rule 21 (OCCURRENCES -> MINUS .)
    IGUAL           reduce using rule 21 (OCCURRENCES -> MINUS .)
    FPR             reduce using rule 21 (OCCURRENCES -> MINUS .)


state 21

    (22) OCCURRENCES -> UNDERSCORE .

    CHAR            reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    INTEGER         reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    MINUS           reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    UNDERSCORE      reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    DOT_SEP         reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    WHITESPACE      reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    IGUAL           reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)
    FPR             reduce using rule 22 (OCCURRENCES -> UNDERSCORE .)


state 22

    (1) TOML -> EXPRESSION TOML2 .

    $end            reduce using rule 1 (TOML -> EXPRESSION TOML2 .)


state 23

    (2) TOML2 -> NEWLINE . EXPRESSION TOML2
    (4) EXPRESSION -> . KVALUE EXPRESSION2
    (5) EXPRESSION -> . EXPRESSION2
    (6) EXPRESSION -> . TABLE EXPRESSION2
    (9) KVALUE -> . KEY kvwhitespace IGUAL kvwhitespace VALUE
    (7) EXPRESSION2 -> .
    (8) EXPRESSION2 -> . COMMENT
    (118) TABLE -> . APR KEY FPR
    (12) KEY -> . SIMPLEKEY
    (13) KEY -> . DOTKEY
    (14) SIMPLEKEY -> . QUOTEDKEY
    (15) SIMPLEKEY -> . UNQUOTEDKEY
    (25) DOTKEY -> . SIMPLEKEY DOT_SEP SIMPLEKEY DOTSIMPKEY
    (23) QUOTEDKEY -> . BASICSTRING
    (24) QUOTEDKEY -> . LITERALSTRING
    (16) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (37) BASICSTRING -> . ASPA BC ASPA
    (84) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    NEWLINE         reduce using rule 7 (EXPRESSION2 -> .)
    $end            reduce using rule 7 (EXPRESSION2 -> .)
    COMMENT         shift and go to state 7
    APR             shift and go to state 8
    ASPA            shift and go to state 16
    APOSTROFE       shift and go to state 17
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    EXPRESSION                     shift and go to state 55
    KVALUE                         shift and go to state 3
    EXPRESSION2                    shift and go to state 4
    TABLE                          shift and go to state 5
    KEY                            shift and go to state 6
    SIMPLEKEY                      shift and go to state 9
    DOTKEY                         shift and go to state 10
    QUOTEDKEY                      shift and go to state 11
    UNQUOTEDKEY                    shift and go to state 12
    BASICSTRING                    shift and go to state 13
    LITERALSTRING                  shift and go to state 14
    OCCURRENCES                    shift and go to state 15

state 24

    (4) EXPRESSION -> KVALUE EXPRESSION2 .

    NEWLINE         reduce using rule 4 (EXPRESSION -> KVALUE EXPRESSION2 .)
    $end            reduce using rule 4 (EXPRESSION -> KVALUE EXPRESSION2 .)


state 25

    (6) EXPRESSION -> TABLE EXPRESSION2 .

    NEWLINE         reduce using rule 6 (EXPRESSION -> TABLE EXPRESSION2 .)
    $end            reduce using rule 6 (EXPRESSION -> TABLE EXPRESSION2 .)


state 26

    (9) KVALUE -> KEY kvwhitespace . IGUAL kvwhitespace VALUE

    IGUAL           shift and go to state 56


state 27

    (10) kvwhitespace -> WHITESPACE .

    IGUAL           reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    BOOLEAN         reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    INTEGER         reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    FLOAT           reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    APR             reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    ASPA            reduce using rule 10 (kvwhitespace -> WHITESPACE .)
    APOSTROFE       reduce using rule 10 (kvwhitespace -> WHITESPACE .)


state 28

    (118) TABLE -> APR KEY . FPR

    FPR             shift and go to state 57


state 29

    (25) DOTKEY -> SIMPLEKEY DOT_SEP . SIMPLEKEY DOTSIMPKEY
    (14) SIMPLEKEY -> . QUOTEDKEY
    (15) SIMPLEKEY -> . UNQUOTEDKEY
    (23) QUOTEDKEY -> . BASICSTRING
    (24) QUOTEDKEY -> . LITERALSTRING
    (16) UNQUOTEDKEY -> . OCCURRENCES UNQUOTEDKEYAUX
    (37) BASICSTRING -> . ASPA BC ASPA
    (84) LITERALSTRING -> . APOSTROFE LCH APOSTROFE
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    ASPA            shift and go to state 16
    APOSTROFE       shift and go to state 17
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    SIMPLEKEY                      shift and go to state 58
    QUOTEDKEY                      shift and go to state 11
    UNQUOTEDKEY                    shift and go to state 12
    BASICSTRING                    shift and go to state 13
    LITERALSTRING                  shift and go to state 14
    OCCURRENCES                    shift and go to state 15

state 30

    (17) UNQUOTEDKEYAUX -> OCCURRENCES . UNQUOTEDKEYAUX
    (17) UNQUOTEDKEYAUX -> . OCCURRENCES UNQUOTEDKEYAUX
    (18) UNQUOTEDKEYAUX -> .
    (19) OCCURRENCES -> . CHAR
    (20) OCCURRENCES -> . INTEGER
    (21) OCCURRENCES -> . MINUS
    (22) OCCURRENCES -> . UNDERSCORE

    DOT_SEP         reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    WHITESPACE      reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    IGUAL           reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    FPR             reduce using rule 18 (UNQUOTEDKEYAUX -> .)
    CHAR            shift and go to state 18
    INTEGER         shift and go to state 19
    MINUS           shift and go to state 20
    UNDERSCORE      shift and go to state 21

    OCCURRENCES                    shift and go to state 30
    UNQUOTEDKEYAUX                 shift and go to state 59

state 31

    (16) UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX .

    DOT_SEP         reduce using rule 16 (UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX .)
    WHITESPACE      reduce using rule 16 (UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX .)
    IGUAL           reduce using rule 16 (UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX .)
    FPR             reduce using rule 16 (UNQUOTEDKEY -> OCCURRENCES UNQUOTEDKEYAUX .)


state 32

    (37) BASICSTRING -> ASPA BC . ASPA

    ASPA            shift and go to state 60


state 33
